// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`trpc/truth > 解答した内容に対して、結果が返る > 真相に対して正しい解答をするとCoversが返る。 ['山田さんは男性用トイレにいたが、他の男性に見つかりそうになり女性用トイレに…'] 1`] = `
{
  "distance": 0,
  "input": "山田さんは男性用トイレにいたが、他の男性に見つかりそうになり女性用トイレに逃げ込んだ。",
  "result": "Covers",
  "truth": "山田さんがいるのは人気のない深夜の公園の公衆便所。 その日、山田さん人を殺害し男性用トイレに死体を隠そうとした。 しかし、その途中で山田さんはトイレに向かってくる複数の男性の喋り声に気づく。 山田さんは返り血を浴びており、もしも彼らに見つかれば間違いなく不審に思われるだろう。公園は見通しが良いためトイレから出ることも難しい。幸い、男性の位置からはトイレの入り口は見えない。 山田さんは彼らに見つからないように、男性達が入らないであろう女性用トイレに逃げ込んだ。
",
}
`;

exports[`trpc/truth > 解答した内容に対して、結果が返る > 真相に対して正しい解答をするとCoversが返る。 ['山田さんは男性用トイレにいたが、男性から隠れるために女性用トイレに移動した。'] 1`] = `
{
  "distance": 0.22,
  "input": "山田さんは男性用トイレにいたが、男性から隠れるために女性用トイレに移動した。",
  "result": "Covers",
  "truth": "山田さんがいるのは人気のない深夜の公園の公衆便所。 その日、山田さん人を殺害し男性用トイレに死体を隠そうとした。 しかし、その途中で山田さんはトイレに向かってくる複数の男性の喋り声に気づく。 山田さんは返り血を浴びており、もしも彼らに見つかれば間違いなく不審に思われるだろう。公園は見通しが良いためトイレから出ることも難しい。幸い、男性の位置からはトイレの入り口は見えない。 山田さんは彼らに見つからないように、男性達が入らないであろう女性用トイレに逃げ込んだ。
",
}
`;

exports[`trpc/truth > 解答した内容に対して、結果が返る > 真相に対して正しい解答をするとCoversが返る。 ['花子さんは運転手であり、終点についても、ずっと運転席に座っている。'] 1`] = `
{
  "distance": 0.3,
  "input": "花子さんは運転手であり、終点についても、ずっと運転席に座っている。",
  "result": "Covers",
  "truth": "花子さんはバスの運転手であり、花子さんにとってバスの運転席が仕事場である。花子さんは今日も仕事場である市営バスの運転席に向かい、そして業務にあたる。終点に着いた後も業務のためにバスの運転席に座り続ける必要があった。",
}
`;

exports[`trpc/truth > 解答した内容に対して、結果が返る > 真相に対して正しい解答をするとCoversが返る。 ['花子さんは運転手であり、終点についてもずっと運転席に座っている。'] 1`] = `
{
  "distance": 0.3,
  "input": "花子さんは運転手であり、終点についてもずっと運転席に座っている。",
  "result": "Covers",
  "truth": "花子さんはバスの運転手であり、花子さんにとってバスの運転席が仕事場である。花子さんは今日も仕事場である市営バスの運転席に向かい、そして業務にあたる。終点に着いた後も業務のためにバスの運転席に座り続ける必要があった。",
}
`;

exports[`trpc/truth > 解答した内容に対して、結果が返る > 真相に対して正しい解答をするとCoversが返る。 ['花子さんは運転手であり、終点の後もずっと運転席に座っている。'] 1`] = `
{
  "distance": 0.31,
  "input": "花子さんは運転手であり、終点の後もずっと運転席に座っている。",
  "result": "Covers",
  "truth": "花子さんはバスの運転手であり、花子さんにとってバスの運転席が仕事場である。花子さんは今日も仕事場である市営バスの運転席に向かい、そして業務にあたる。終点に着いた後も業務のためにバスの運転席に座り続ける必要があった。",
}
`;

exports[`trpc/truth > 解答した内容に対して、結果が返る > 真相に対して正しい解答をするとCoversが返る。 ['花子さんは運転手であり、終点の後も乗っていた。'] 1`] = `
{
  "distance": 0.36,
  "input": "花子さんは運転手であり、終点の後も乗っていた。",
  "result": "Covers",
  "truth": "花子さんはバスの運転手であり、花子さんにとってバスの運転席が仕事場である。花子さんは今日も仕事場である市営バスの運転席に向かい、そして業務にあたる。終点に着いた後も業務のためにバスの運転席に座り続ける必要があった。",
}
`;

exports[`trpc/truth > 解答した内容に対して、結果が返る > 真相に対して正しい解答をするとCoversが返る。 ['花子さんは運転手なので、終点の後も乗っていた。'] 1`] = `
{
  "distance": 0.36,
  "input": "花子さんは運転手なので、終点の後も乗っていた。",
  "result": "Covers",
  "truth": "花子さんはバスの運転手であり、花子さんにとってバスの運転席が仕事場である。花子さんは今日も仕事場である市営バスの運転席に向かい、そして業務にあたる。終点に着いた後も業務のためにバスの運転席に座り続ける必要があった。",
}
`;

exports[`trpc/truth > 解答した内容に対して、結果が返る > 真相に対して正しい解答をするとCoversが返る。 [{
  storyId: '1LNEyq0wvyq38ep',
  text: '山田さんは男性用トイレにいたが、他の男性に見つかりそうになり女性用トイレに逃げ込んだ。'
}] 1`] = `
{
  "distance": 0,
  "input": "山田さんは男性用トイレにいたが、他の男性に見つかりそうになり女性用トイレに逃げ込んだ。",
  "result": "Covers",
  "truth": "山田さんがいるのは人気のない深夜の公園の公衆便所。 その日、山田さん人を殺害し男性用トイレに死体を隠そうとした。 しかし、その途中で山田さんはトイレに向かってくる複数の男性の喋り声に気づく。 山田さんは返り血を浴びており、もしも彼らに見つかれば間違いなく不審に思われるだろう。公園は見通しが良いためトイレから出ることも難しい。幸い、男性の位置からはトイレの入り口は見えない。 山田さんは彼らに見つからないように、男性達が入らないであろう女性用トイレに逃げ込んだ。
",
}
`;

exports[`trpc/truth > 解答した内容に対して、結果が返る > 真相に対して正しい解答をするとCoversが返る。 [{
  storyId: '1LNEyq0wvyq38ep',
  text: '山田さんは男性用トイレにいたが、男性から隠れるために女性用トイレに移動した。'
}] 1`] = `
{
  "distance": 0.22,
  "input": "山田さんは男性用トイレにいたが、男性から隠れるために女性用トイレに移動した。",
  "result": "Covers",
  "truth": "山田さんがいるのは人気のない深夜の公園の公衆便所。 その日、山田さん人を殺害し男性用トイレに死体を隠そうとした。 しかし、その途中で山田さんはトイレに向かってくる複数の男性の喋り声に気づく。 山田さんは返り血を浴びており、もしも彼らに見つかれば間違いなく不審に思われるだろう。公園は見通しが良いためトイレから出ることも難しい。幸い、男性の位置からはトイレの入り口は見えない。 山田さんは彼らに見つからないように、男性達が入らないであろう女性用トイレに逃げ込んだ。
",
}
`;

exports[`trpc/truth > 解答した内容に対して、結果が返る > 真相に対して正しい解答をするとCoversが返る。 [{
  storyId: 'OYhEvfaWv7tqhtN',
  text: '山田さんは男性用トイレにいたが、他の男性に見つかりそうになり女性用トイレに逃げ込んだ。'
}] 1`] = `
{
  "distance": 0,
  "input": "山田さんは男性用トイレにいたが、他の男性に見つかりそうになり女性用トイレに逃げ込んだ。",
  "result": "Covers",
  "truth": "山田さんがいるのは人気のない深夜の公園の公衆便所。 その日、山田さん人を殺害し男性用トイレに死体を隠そうとした。 しかし、その途中で山田さんはトイレに向かってくる複数の男性の喋り声に気づく。 山田さんは返り血を浴びており、もしも彼らに見つかれば間違いなく不審に思われるだろう。公園は見通しが良いためトイレから出ることも難しい。幸い、男性の位置からはトイレの入り口は見えない。 山田さんは彼らに見つからないように、男性達が入らないであろう女性用トイレに逃げ込んだ。
",
}
`;

exports[`trpc/truth > 解答した内容に対して、結果が返る > 真相に対して正しい解答をするとCoversが返る。 [{
  storyId: 'OYhEvfaWv7tqhtN',
  text: '山田さんは男性用トイレにいたが、男性から隠れるために女性用トイレに移動した。'
}] 1`] = `
{
  "distance": 0.22,
  "input": "山田さんは男性用トイレにいたが、男性から隠れるために女性用トイレに移動した。",
  "result": "Covers",
  "truth": "山田さんがいるのは人気のない深夜の公園の公衆便所。 その日、山田さん人を殺害し男性用トイレに死体を隠そうとした。 しかし、その途中で山田さんはトイレに向かってくる複数の男性の喋り声に気づく。 山田さんは返り血を浴びており、もしも彼らに見つかれば間違いなく不審に思われるだろう。公園は見通しが良いためトイレから出ることも難しい。幸い、男性の位置からはトイレの入り口は見えない。 山田さんは彼らに見つからないように、男性達が入らないであろう女性用トイレに逃げ込んだ。
",
}
`;

exports[`trpc/truth > 解答した内容に対して、結果が返る > 真相に対して正しい解答をするとCoversが返る。 [{
  storyId: 'SVonKAYPEhJVnke',
  text: '山田さんは男性用トイレにいたが、他の男性に見つかりそうになり女性用トイレに逃げ込んだ。'
}] 1`] = `
{
  "distance": 0,
  "input": "山田さんは男性用トイレにいたが、他の男性に見つかりそうになり女性用トイレに逃げ込んだ。",
  "result": "Covers",
  "truth": "山田さんがいるのは人気のない深夜の公園の公衆便所。 その日、山田さん人を殺害し男性用トイレに死体を隠そうとした。 しかし、その途中で山田さんはトイレに向かってくる複数の男性の喋り声に気づく。 山田さんは返り血を浴びており、もしも彼らに見つかれば間違いなく不審に思われるだろう。公園は見通しが良いためトイレから出ることも難しい。幸い、男性の位置からはトイレの入り口は見えない。 山田さんは彼らに見つからないように、男性達が入らないであろう女性用トイレに逃げ込んだ。
",
}
`;

exports[`trpc/truth > 解答した内容に対して、結果が返る > 真相に対して正しい解答をするとCoversが返る。 [{
  storyId: 'SVonKAYPEhJVnke',
  text: '山田さんは男性用トイレにいたが、男性から隠れるために女性用トイレに移動した。'
}] 1`] = `
{
  "distance": 0.22,
  "input": "山田さんは男性用トイレにいたが、男性から隠れるために女性用トイレに移動した。",
  "result": "Covers",
  "truth": "山田さんがいるのは人気のない深夜の公園の公衆便所。 その日、山田さん人を殺害し男性用トイレに死体を隠そうとした。 しかし、その途中で山田さんはトイレに向かってくる複数の男性の喋り声に気づく。 山田さんは返り血を浴びており、もしも彼らに見つかれば間違いなく不審に思われるだろう。公園は見通しが良いためトイレから出ることも難しい。幸い、男性の位置からはトイレの入り口は見えない。 山田さんは彼らに見つからないように、男性達が入らないであろう女性用トイレに逃げ込んだ。
",
}
`;

exports[`trpc/truth > 解答した内容に対して、結果が返る > 真相に対して正しい解答をするとCoversが返る。 [{
  storyId: 'fXITmTLtCvH99MD',
  text: '山田さんは男性用トイレにいたが、他の男性に見つかりそうになり女性用トイレに逃げ込んだ。'
}] 1`] = `
{
  "distance": 0,
  "input": "山田さんは男性用トイレにいたが、他の男性に見つかりそうになり女性用トイレに逃げ込んだ。",
  "result": "Covers",
  "truth": "山田さんがいるのは人気のない深夜の公園の公衆便所。 その日、山田さん人を殺害し男性用トイレに死体を隠そうとした。 しかし、その途中で山田さんはトイレに向かってくる複数の男性の喋り声に気づく。 山田さんは返り血を浴びており、もしも彼らに見つかれば間違いなく不審に思われるだろう。公園は見通しが良いためトイレから出ることも難しい。幸い、男性の位置からはトイレの入り口は見えない。 山田さんは彼らに見つからないように、男性達が入らないであろう女性用トイレに逃げ込んだ。
",
}
`;

exports[`trpc/truth > 解答した内容に対して、結果が返る > 真相に対して正しい解答をするとCoversが返る。 [{
  storyId: 'fXITmTLtCvH99MD',
  text: '山田さんは男性用トイレにいたが、男性から隠れるために女性用トイレに移動した。'
}] 1`] = `
{
  "distance": 0.22,
  "input": "山田さんは男性用トイレにいたが、男性から隠れるために女性用トイレに移動した。",
  "result": "Covers",
  "truth": "山田さんがいるのは人気のない深夜の公園の公衆便所。 その日、山田さん人を殺害し男性用トイレに死体を隠そうとした。 しかし、その途中で山田さんはトイレに向かってくる複数の男性の喋り声に気づく。 山田さんは返り血を浴びており、もしも彼らに見つかれば間違いなく不審に思われるだろう。公園は見通しが良いためトイレから出ることも難しい。幸い、男性の位置からはトイレの入り口は見えない。 山田さんは彼らに見つからないように、男性達が入らないであろう女性用トイレに逃げ込んだ。
",
}
`;

exports[`trpc/truth > 解答した内容に対して、結果が返る > 真相に対して正しい解答をするとCoversが返る。 [{ storyId: '5jvHv0VLYZJBJv4', text: '花子さんは運転手なので、終点の後も乗っていた。' }] 1`] = `
{
  "distance": 0.36,
  "input": "花子さんは運転手なので、終点の後も乗っていた。",
  "result": "Covers",
  "truth": "花子さんはバスの運転手であり、花子さんにとってバスの運転席が仕事場である。花子さんは今日も仕事場である市営バスの運転席に向かい、そして業務にあたる。終点に着いた後も業務のためにバスの運転席に座り続ける必要があった。",
}
`;

exports[`trpc/truth > 解答した内容に対して、結果が返る > 真相に対して正しい解答をするとCoversが返る。 [{ storyId: 'JgBouyhkhpiR0L5', text: '花子さんは運転手なので、終点の後も乗っていた。' }] 1`] = `
{
  "distance": 0.36,
  "input": "花子さんは運転手なので、終点の後も乗っていた。",
  "result": "Covers",
  "truth": "花子さんはバスの運転手であり、花子さんにとってバスの運転席が仕事場である。花子さんは今日も仕事場である市営バスの運転席に向かい、そして業務にあたる。終点に着いた後も業務のためにバスの運転席に座り続ける必要があった。",
}
`;

exports[`trpc/truth > 解答した内容に対して、結果が返る > 真相に対して正しい解答をするとCoversが返る。 [{ storyId: 'lkeEI9sxkrD7GKk', text: '花子さんは運転手なので、終点の後も乗っていた。' }] 1`] = `
{
  "distance": 0.36,
  "input": "花子さんは運転手なので、終点の後も乗っていた。",
  "result": "Covers",
  "truth": "花子さんはバスの運転手であり、花子さんにとってバスの運転席が仕事場である。花子さんは今日も仕事場である市営バスの運転席に向かい、そして業務にあたる。終点に着いた後も業務のためにバスの運転席に座り続ける必要があった。",
}
`;

exports[`trpc/truth > 解答した内容に対して、結果が返る > 真相に対して正しい解答をするとCoversが返る。 [{ storyId: 'mYIsn3D5jkVOkCK', text: '花子さんは運転手なので、終点の後も乗っていた。' }] 1`] = `
{
  "distance": 0.36,
  "input": "花子さんは運転手なので、終点の後も乗っていた。",
  "result": "Covers",
  "truth": "花子さんはバスの運転手であり、花子さんにとってバスの運転席が仕事場である。花子さんは今日も仕事場である市営バスの運転席に向かい、そして業務にあたる。終点に着いた後も業務のためにバスの運転席に座り続ける必要があった。",
}
`;

exports[`trpc/truth > 解答した内容に対して、結果が返る > 真相に対して正しい解答をするとCoversが返る。 [山田さんは男性用トイレにいたが、他の男性に見つかりそうになり女性用トイレに逃げ込んだ。] 1`] = `
{
  "distance": 0,
  "input": "山田さんは男性用トイレにいたが、他の男性に見つかりそうになり女性用トイレに逃げ込んだ。",
  "result": "Covers",
  "truth": "山田さんがいるのは人気のない深夜の公園の公衆便所。 その日、山田さん人を殺害し男性用トイレに死体を隠そうとした。 しかし、その途中で山田さんはトイレに向かってくる複数の男性の喋り声に気づく。 山田さんは返り血を浴びており、もしも彼らに見つかれば間違いなく不審に思われるだろう。公園は見通しが良いためトイレから出ることも難しい。幸い、男性の位置からはトイレの入り口は見えない。 山田さんは彼らに見つからないように、男性達が入らないであろう女性用トイレに逃げ込んだ。
",
}
`;

exports[`trpc/truth > 解答した内容に対して、結果が返る > 真相に対して正しい解答をするとCoversが返る。 [山田さんは男性用トイレにいたが、男性から隠れるために女性用トイレに移動した。] 1`] = `
{
  "distance": 0.22,
  "input": "山田さんは男性用トイレにいたが、男性から隠れるために女性用トイレに移動した。",
  "result": "Covers",
  "truth": "山田さんがいるのは人気のない深夜の公園の公衆便所。 その日、山田さん人を殺害し男性用トイレに死体を隠そうとした。 しかし、その途中で山田さんはトイレに向かってくる複数の男性の喋り声に気づく。 山田さんは返り血を浴びており、もしも彼らに見つかれば間違いなく不審に思われるだろう。公園は見通しが良いためトイレから出ることも難しい。幸い、男性の位置からはトイレの入り口は見えない。 山田さんは彼らに見つからないように、男性達が入らないであろう女性用トイレに逃げ込んだ。
",
}
`;

exports[`trpc/truth > 解答した内容に対して、結果が返る > 真相に対して間違えた解答をするとがWrong返る ['山田さんは人を殺害し、見つからないように女性トイレに隠れた'] 1`] = `
{
  "distance": 0.39,
  "input": "山田さんは人を殺害し、見つからないように女性トイレに隠れた",
  "result": "Wrong",
  "truth": null,
}
`;

exports[`trpc/truth > 解答した内容に対して、結果が返る > 真相に対して間違えた解答をするとがWrong返る ['山田さんは女性になりたくて女性用トイレに入った'] 1`] = `
{
  "distance": 0.32,
  "input": "山田さんは女性になりたくて女性用トイレに入った",
  "result": "Wrong",
  "truth": null,
}
`;

exports[`trpc/truth > 解答した内容に対して、結果が返る > 真相に対して間違えた解答をするとがWrong返る ['山田さんは女性用トイレに入った'] 1`] = `
{
  "distance": 0.32,
  "input": "山田さんは女性用トイレに入った",
  "result": "Wrong",
  "truth": null,
}
`;

exports[`trpc/truth > 解答した内容に対して、結果が返る > 真相に対して間違えた解答をするとがWrong返る ['山田さんは覗きをするために女性用トイレに入った。'] 1`] = `
{
  "distance": 0.3,
  "input": "山田さんは覗きをするために女性用トイレに入った。",
  "result": "Wrong",
  "truth": null,
}
`;

exports[`trpc/truth > 解答した内容に対して、結果が返る > 真相に対して間違えた解答をするとがWrong返る ['山田さんは隠れるために女性用トイレに入った'] 1`] = `
{
  "distance": 0.31,
  "input": "山田さんは隠れるために女性用トイレに入った",
  "result": "Wrong",
  "truth": null,
}
`;

exports[`trpc/truth > 解答した内容に対して、結果が返る > 真相に対して間違えた解答をするとがWrong返る ['花子さんは死んでしまったため、終点でもずっと座っていた。'] 1`] = `
{
  "distance": 0.43,
  "input": "花子さんは死んでしまったため、終点でもずっと座っていた。",
  "result": "Wrong",
  "truth": null,
}
`;

exports[`trpc/truth > 解答した内容に対して、結果が返る > 真相に対して間違えた解答をするとがWrong返る [山田さんは人を殺害し、見つからないように女性トイレに隠れた] 1`] = `
{
  "distance": 0.39,
  "input": "山田さんは人を殺害し、見つからないように女性トイレに隠れた",
  "result": "Wrong",
  "truth": null,
}
`;

exports[`trpc/truth > 解答した内容に対して、結果が返る > 真相に対して間違えた解答をするとがWrong返る [山田さんは女性用トイレに入った] 1`] = `
{
  "distance": 0.32,
  "input": "山田さんは女性用トイレに入った",
  "result": "Wrong",
  "truth": null,
}
`;

exports[`trpc/truth > 解答した内容に対して、結果が返る > 真相に対して間違えた解答をするとがWrong返る [山田さんは覗きをするために女性用トイレに入った。] 1`] = `
{
  "distance": 0.3,
  "input": "山田さんは覗きをするために女性用トイレに入った。",
  "result": "Wrong",
  "truth": null,
}
`;

exports[`trpc/truth > 解答した内容に対して、結果が返る > 真相に対して間違えた解答をするとがWrong返る [山田さんは隠れるために女性用トイレに入った] 1`] = `
{
  "distance": 0.31,
  "input": "山田さんは隠れるために女性用トイレに入った",
  "result": "Wrong",
  "truth": null,
}
`;

exports[`trpc/truth > 解答した内容に対して、結果が返る > 真相に対して間違えた解答をするとがWrong返る [山田は女性になりたくて女性用トイレに入った] 1`] = `
{
  "distance": 0.35,
  "input": "山田は女性になりたくて女性用トイレに入った",
  "result": "Wrong",
  "truth": null,
}
`;
